Cleanup and finalize all work

--- a/doc/main/annotation.tex
+++ b/doc/main/annotation.tex
@@ -1,4 +1,11 @@
 \chapter*{Аннотация}
-\addcontentsline{toc}{chapter}{Аннотация}
+%\addcontentsline{toc}{chapter}{Аннотация}
+\iffalse
+    Дипломная работа посвящена разработке средства, осуществляющего трансляцию описаний предметных областей и задач планирования на языке PDDL в модели языка UML. 
+Разработанное программное средство осуществляет трансляцию в формат XMI, который является стандартом обмена UML-моделями. 
+Полученные модели в виде файлов XMI позднее могут быть открыты и обработаны в различных приложениях, например, Eclipse Papyrus.
+\fi
 
-\newpage
+Дипломная работа посвящена исследованию современных способов представления знаний систем планирования. Рассматривается способ представления знаний планировщика в виде UML-моделей. Для полноценной поддержки практического применения этого способа необходимо создание программного средства для генерации UML-моделей по входным описаниям предметных областей и задач планирования на языке PDDL. Задача создания такого средства помимо технических вопросов включала в себя теоретическую часть.
+
+В рамках работы были предложены: отображение между конструкциями подмножества PDDL и UML и способ пополнения генерируемых UML-моделей сведениями о предметной области, не заданными явно во входных PDDL-описаниях. Разработано программное средство, реализующее данное отображение. Полученные UML-модели сохраняются в формате обмена метаданными XMI, что позволяет применять к моделям большую часть современных программных инструментов для UML.
