--- a/doc/main/bibliography.tex
+++ b/doc/main/bibliography.tex
@@ -4,10 +4,6 @@
 \bibitem{norwig-ai}
 \textbf{Рассел С., Норвиг П.} \textit{Искусственный интеллект: современный подход, 2-е изд.} М. : Вильямс, 2006. 1408 с.
 
-
-\bibitem{strips}
-\textbf{Fikes R., Nilsson N.} \textit{STRIPS: a new approach to the application of theorem proving to problem solving // Artificial Intelligence}. 1971. 2. P. 189-208.
-
 \bibitem{pddl3}
 \textbf{Gerevini, A., Long, D.} \textit{Plan constraints and preferences in PDDL3.} Technical Report, Univ. Brescia, Italy, 2005. 12p.
 
@@ -27,8 +23,17 @@
 \bibitem{use}
 \textbf{Gogolla M., Büttner F., Richter M.}. \textit{USE: A UML-Based Specification Environment for Validating UML and OCL.} Science of Computer Programming, 69:27-34, 2007.
 
+\bibitem{itsimple}
+\textbf{Vaquero T. S., Tonaco R. et al.} \textit{itSIMPLE4.0: Enhancing the Modeling Experience of Planning Problems.} Proceedings of the ICAPS 2012 System Demonstration, São Paulo : s.n., 2012. pp. 11-14.
+
+\bibitem{arlou}
+\textbf{Арлоу Д., Нейштадт И.} \textit{UML 2 и унифицированный процесс. Практический объектно-ориентированный анализ и проектирование}, 2-е изд. СПб.: Символ-Плюс, 2007
+
 \bibitem{gipo}
-Graphical Interface for Planning with Objects. GIPO project. \textit{(http://planform.hud.ac.uk/gipo/gipo\_home.html)} 
+\textbf{Simpson R.M.}. \textit{GIPO Graphical Interface for Planning with Objects.} The University of Huddersfield
+
+\bibitem{modisco}
+\textbf{Bruneliere H., Cabot J., Dupe G., Madiot F.}. \textit{MoDisco: a Model Driven Reverse Engineering Framework}. Information and Software Technology, 2014.
 
 \bibitem{mal-manz}
 \textbf{Малышко В. В., Манжосов А. Н.} Решение задач инженерии знаний средствами объектно-ориентированной инженерии программного обеспечения. // Программные системы и инструменты. Тематический сборник No 13. М.: Изд-во факультета ВМиК МГУ, 2012. С. 44-54.
@@ -36,14 +41,15 @@ Graphical Interface for Planning with Objects. GIPO project. \textit{(http://pla
 \bibitem{ocl}
 \textbf{Warmer, Kleppe.} \textit{The Object Constraint Language: Getting Your Models Ready for MDA, Second Edition.} Addison-Wesley, 2003.
 
-\bibitem{itsimple}
-\textbf{Vaquero T. S., Tonaco R. et al.} \textit{itSIMPLE4.0: Enhancing the Modeling Experience of Planning Problems.} Proceedings of the ICAPS 2012 System Demonstration, São Paulo : s.n., 2012. pp. 11-14.
-
 \bibitem{mofm2t}
 Object Management Group MOF Model to Text Transformation Language, v 1.0 2008 \textit{(http://www.omg.org/spec/MOFM2T/1.0/PDF)}
 
 \bibitem{antlr}
 \textbf{Terence Parr.} \textit{ The Definitive ANTLR 4 Reference}, 2013. 328p.
+
+\bibitem{pddl4j}
+\textbf{Damien Pellier.} PDDL4J: PDDL for Java, 2009 \textit{(https://github.com/gerryai/PDDL4J)}
+
 
 \end{thebibliography}
 
