--- a/doc/main/conclusion.tex
+++ b/doc/main/conclusion.tex
@@ -1,4 +1,18 @@
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
 
+Основные результаты работы состоят в следующем:
+
+%Рассмотрен способ представления знаний о предметных областях и задачах планирования с использованием моделей UML. Составлен набор правил преобразования PDDL-описаний в UML-спецификации. Правила обеспечивают выполнение свойств отображений всех составляющих представления, требуемых для сохранения исходной семантики.
+
+%Разработан инструмент, осуществляющий трансляцию PDDL-представления знаний о предметных областях и задачах планирования в UML-представление на основе предложенного набора правил. В результате работы инструмента получаются UML-модели в формате XMI соответствующие метамодели UML и стандарту передачи UML посредством XMI. Полученные модели могут быть открыты и изменены в таком UML редакторе как Eclipse Papyrus UML. В своей работе инструмент использует библиотеку PDDL4J для разбора PDDL-описаний и библиотеку Eclipse UML2 для работы с UML моделями.
+
+%Предложен способ отображения конструкций языка PDDL в конструкции языка UML для генерации объектных моделей по входным PDDL описаниям. Кроме того, предложен способ пополнения генерируемых UML-моделей сведениями о предметной области, не заданными явно во входных PDDL-описаниях.
+
+%Разработан инструмент, осуществляющий трансляцию PDDL-представления знаний о предметных областях и задачах планирования в UML-представление на основе предложенного способа отображения. В результате работы инструмента генерируются UML-модели в формате XMI, соответствующие метамодели UML и стандарту передачи UML посредством XMI. Полученные модели могут быть открыты и изменены в различных UML-редакторах и других средствах, основанных на той же метамодели UML. Переносимость моделей, заявленная, как одна из целей работы, была достигнута.
+
+Предложен набор правил преобразования основных конструкций языка PDDL в элементы языка UML. Правила сохраняют исходную семантику знаний и могут применяться для генерации UML-моделей по входным PDDL-описаниям предметных областей и задач планирования. Кроме того, предложен способ пополнения генерируемых UML-моделей сведениями о предметной области, не заданными явно во входных PDDL-описаниях.
+
+Разработан генератор UML-моделей по входным описаниям предметных областей и задач планирования на языке PDDL. Генератор в результате своей работы создает UML-модели в соответствии с современной версией стандарта OMG метамодели UML (ISO~19505:2012) и стандарта представления для обмена метаданнымми XMI (ISO~19509). Благодаря этому, большой набор инструментальных средств может быть применен к генерируемым UML-моделям.
+
 \newpage
