--- a/doc/main/problem.tex
+++ b/doc/main/problem.tex
@@ -5,10 +5,10 @@
     В данной дипломной работе предполагается создать программное средство, которое будет автоматизировать преобразование представлений знаний систем планирования из текстового (PDDL-представления) в графическое (в виде UML-моделей).
  Получение UML-представления может быть полезно, так как:
     \begin{itemize}
-        \item UML-модели более наглядны, составлять UML базы знаний могут эксперты, не знакомые с PDDL;
+        \item UML-модели более наглядны, поэтому составлять UML базы знаний могут эксперты, не знакомые с PDDL;
         \item UML-модель может быть отредактирована в UML-редакторе, и при необходимости её можно транслировать в другие языки (Java, PDDL, и~др.);
-        \item существуют средства валидации и исполнения UML-моделей для проверки корректности знаний\cite{use}; 
-        \item существуют средства трансформации моделей, с помощью которых можно из UML-модели предметной области получить описания задач для этой предметной области.
+        \item существуют средства проверки и исполнения UML-моделей и они могут быть применены для выявления ошибок в базах знаний\cite{use}; 
+        \item существуют средства трансформации моделей, которым также можно найти применение в инженерии знаний. Например, составление условий задач может осуществляться автоматически, если реализовывать этот процесс как трансформацию модели предметной области в модель условия задачи.
     \end{itemize}
 
    \par  Пусть $K$~--- знания системы планирования, $K = \langle D, T \rangle$, где $D$~--- знания о предметной области,
@@ -25,10 +25,12 @@
     Знания в PDDL-представлении задаются следующим образом.
  $D_{PDDL} = \langle Types_{PDDL}, Relations_{PDDL}, Actions_{PDDL} \rangle$, где $Types_{PDDL}$~--- описания типов, $Relations_{PDDL}$~--- описания отношений в виде предикатов, $Actions_{PDDL}$~--- описания параметров действий, их предусловий и эффектов.
  Задачи  $t_{i, PDDL} = \langle Init_{PDDL}, Goal_{PDDL} \rangle$ описываются перечислением объектов с их типами, уточнением отношений между объектами.
-   Все это можно увидеть на примере, приведенном раннее.
+   Все это можно увидеть в листинге \ref{lst:philosopher}, приведенном ниже.
+
+   \input{philosopher}
     
     Знания в UML-представлении можно задать следующим образом в виде модели UML.
-  $D_{UML} = \langle Types_{UML}, Relations_{UML}, Attributes_{UML}, Actions_{UML} \rangle$, где $Types_{UML}$~--- UML-классы, соответствующие PDDL-типам, $Relations_{UML}$~--- UML-ассоциации между классами, соответствующие \textit{n-арным} ($n > 1$) между типами в PDDL, $Attributes_{UML}$~--- атрибуты классов, соответствующие \textit{унарным} предикатам PDDL, $Actions_{UML}$~--- описания параметров действий, их предусловий и эффектов.
+  $D_{UML} = \langle Types_{UML}, Relations_{UML}, Attributes_{UML}, Actions_{UML} \rangle$, где $Types_{UML}$~--- UML-классы, соответствующие PDDL-типам, $Relations_{UML}$~--- UML-ассоциации между классами, соответствующие \textit{n-арным} ($n > 1$) отношениям между типами в PDDL, $Attributes_{UML}$~--- атрибуты классов, соответствующие \textit{унарным} предикатам PDDL, $Actions_{UML}$~--- описания параметров действий, их предусловий и эффектов.
  $Types_{UML}$ и $Relations_{UML}$ могут быть промоделированы с использованием диаграмм классов.
  $Actions_{UML}$ могут быть заданы, например, при помощи OCL.
  Задачи  $t_{i, UML} = \langle Init_{UML}, Goal_{PDDL} \rangle$ описываются с помощью объектов с указанием их типов, значений атрибутов и экземпляров ассоциаций.
@@ -45,16 +47,16 @@
  Преобразования должны обладать следующими свойствами:
     
     \begin{enumerate}
-        \item В отображении типов (Рис.
+        \item В преобразовании типов (рис.
 ~\ref{img:property-types}) $F_T$ любому PDDL-типу должен соответствовать UML-класс, причем, разным типам должны соответствовать разные классы.
  Если типы связаны отношением тип-подтип, то в UML между ними должна быть связь обобщения:
     
-        \begin{center}
-            $\forall c \in Types_{PDDL} \Rightarrow F_T(c) \in Types_{UML}$; \\
-            $\forall c_1, c_2 \in Types_{PDDL}, c_1 \neq c_2 \Rightarrow F(c_1) \neq F(c_2)$;
-        \end{center}
+        \begin{center}\begin{eqnarray}\label{eq:types}
+            \forall c \in Types_{PDDL} \Rightarrow F_T(c) \in Types_{UML}; \nonumber\\
+            \forall c_1, c_2 \in Types_{PDDL}, c_1 \neq c_2 \Rightarrow F(c_1) \neq F(c_2);
+        \end{eqnarray}\end{center}
                  
-        
+\iffalse        
 \begin{figure}[!h]
     \hfill
     \begin{minipage}[h]{0.40\linewidth}
@@ -76,17 +78,30 @@
     \caption{Пример преобразования типов}
     \label{img:property-types}
 \end{figure}
-   
+\fi
 
-        \item В отображении отношений (Рис.~\ref{img:property-relations}) $F_R$ любому PDDL-предикату соответствует ассоциация UML либо атрибут UML-класса.
- Причем, если предикат \textit{унарный}, то он отображается в атрибут, иначе в ассоциацию; также разным предикатам соответствуют разные ассоциации/атрибуты:
-    
-        \begin{center}
-        $\forall rel \in Relations_{PDDL} \Rightarrow F_R(rel) \in Relations_{UML} \cup Attributes_{UML}$;\\
-        $\forall rel_1, rel_2 \in Relations_{PDDL}, rel_1 \neq rel_2 \Rightarrow F_R(rel_1) \neq F_R(rel_2)$; \\
-        \end{center}
+\translation{
+\begin{alltt}
+  (:types
+    thing - object
+    stone - thing
+  )
+\end{alltt}
+}
+{0.35}
+{property-types}
+{Пример преобразования типов}
+{img:property-types}
 
+        \item В преобразовании отношений (рис.~\ref{img:property-relations}) $F_R$ любому PDDL-предикату соответствует ассоциация UML либо атрибут UML-класса.
+ Причем, если предикат \textit{унарный}, то ему соответствует атрибут, иначе~-- ассоциация; также разным предикатам соответствуют разные ассоциации/атрибуты:
     
+        {\small\begin{eqnarray}\label{eq:predicates}
+        \forall rel \in Relations_{PDDL} \Rightarrow F_R(rel) \in Relations_{UML} \cup Attributes_{UML}; \nonumber\\
+        \forall rel_1, rel_2 \in Relations_{PDDL}, rel_1 \neq rel_2 \Rightarrow F_R(rel_1) \neq F_R(rel_2); 
+        \end{eqnarray}}
+
+\iffalse
 \begin{figure}[h]
     \hfill
     \begin{minipage}[h]{0.50\linewidth}
@@ -109,10 +124,24 @@
     \caption{Пример преобразования отношений}
     \label{img:property-relations}
 \end{figure}       
+\fi
 
+\translation{
+\begin{alltt}
+  (:predicates
+    (right ?phi - Philosopher 
+           ?for - Fork)
+    (hungry ?phi - Philosopher)
+  )
+\end{alltt}
+}
+{0.35}
+{property-relations}
+{Пример преобразования отношений}
+{img:property-relations}
 
         \item 
-        Введем вспомогательное отображение объектов в соответствующие типы $Type: o \in S \rightarrow Types$, отображение экземпляров отношений в соответствующие типы отношений $Relation: rel \in S \rightarrow Relations$, отображение экземпляров атрибутов в соответствующие атрибуты $Attribute_{UML}: atr \in S_{UML} \rightarrow Attributes_{UML}$, и отображение состояний $F_S: S_{PDDL} \rightarrow S_{UML}$,  для корректного определения которого потребуем выполнения следующих свойств:
+        Введем вспомогательное отображение объектов в соответствующие типы $Type: o \in S \rightarrow Types$, отображение экземпляров отношений в соответствующие типы отношений $Relation: rel \in S \rightarrow Relations$, отображение экземпляров атрибутов в соответствующие атрибуты $Attribute_{UML}: atr \in S_{UML} \rightarrow Attributes_{UML}$, и преобразование состояний $F_S: S_{PDDL} \rightarrow S_{UML}$,  для корректного определения которого потребуем выполнения следующих свойств:
        \begin{center}
         $\forall s = \{ o_1, ..., o_n, rel_1, ..., rel_m \} \in S_{PDDL} \Rightarrow$ \\ 
         $\Rightarrow F_S(s) = \{ o_1', ..., o_n', rel_1', ..., rel_k', atr_1, ..., atr_k \} \in S_{UML}$;  \\
@@ -127,42 +156,41 @@
 \right.\]
         \end{center}
         
-        Тогда отображение задач (Рис.~\ref{img:property-tasks}) $F_C$ должно обладать следующим свойством корректности относительно отображения $F_S$ :
+        Тогда преобразование задач (рис.~\ref{img:property-tasks}) $F_C$ должно обладать следующим свойством корректности относительно преобразования $F_S$ :
         
-        \begin{center}
-            $\forall t = \langle I, G \rangle \in T_{PDDL} \Rightarrow F_C(t) = \langle F_S(I), G' \rangle$; \\
-            $\forall s \in S_{PDDL} \Rightarrow G(s) = True \Leftrightarrow G'(F_S(s)) = True $
-        \end{center}
+        \begin{eqnarray}\label{eq:task}
+            \forall t = \langle I, G \rangle \in T_{PDDL} \Rightarrow F_C(t) = \langle F_S(I), G' \rangle; \nonumber\\
+            \forall s \in S_{PDDL} \Rightarrow G(s) = True \Leftrightarrow G'(F_S(s)) = True 
+        \end{eqnarray}
    
 \begin{figure}[h]
-    \center{\includegraphics[width=1\linewidth]{property-tasks}}
+    \center{\includegraphics[width=0.7\linewidth]{property-tasks}}
     \caption{Пример преобразования состояний}
     \label{img:property-tasks}
 \end{figure}   
            
         \item
-    Отображение действий (Рис.
-~\ref{img:property-actions}) $F_A$ должно удовлетворять следующим требованиям:
-    \begin{center}
-        $\forall a \in Actions_{PDDL} \Rightarrow F_A(a) \in Actions_{UML}$; \\    
-    
-        $\forall a_1, a_2 \in Actions_{PDDL}, a_1 \neq a_2 \Rightarrow F_A(a_1) \neq F_A(a_2)$; \\        
- 
-        $\forall a \in Actions_{PDDL}, partypes_a = \langle c_1, c_2, ..., c_n \rangle \Rightarrow F_A(a) = a', partypes_{a'} = \langle F_T(c_1), F_T(c_2), ..., F_T(c_n)\rangle$; \\
- 
-        $\forall a \in Actions_{PDDL}, \forall s \in S_{PDDL}, a' = F_A(a) \Rightarrow precond_a(s, p) = True, p \subset s \Leftrightarrow precond_{a'}(F_S(s), p') = True, p' = F_S(p)$, и \\
-        
-        $effect_{a'}(F_S(s), p') = F_S(effect_a(s, p)), p \subset s, p' = F_S(p) $;
-    \end{center}            
+    Отображение действий $F_A$ должно удовлетворять следующим требованиям:
+    \begin{eqnarray}\label{eq:action}
+        \forall a \in Actions_{PDDL} \Rightarrow F_A(a) \in Actions_{UML}; \nonumber\\    
+        \forall a_1, a_2 \in Actions_{PDDL}, a_1 \neq a_2 \Rightarrow F_A(a_1) \neq F_A(a_2); \nonumber\\        
+        \forall a \in Actions_{PDDL}, partypes_a = \langle c_1, c_2, ..., c_n \rangle \Rightarrow F_A(a) = a',\nonumber\\
+        partypes_{a'} = \langle F_T(c_1), F_T(c_2), ..., F_T(c_n)\rangle; \nonumber\\
+        \forall a \in Actions_{PDDL}, \forall s \in S_{PDDL}, a' = F_A(a) \Rightarrow \nonumber\\ 
+        \Rightarrow precond_a(s, p) = True, p \subset s 
+        \Leftrightarrow \nonumber\\
+        \Leftrightarrow precond_{a'}(F_S(s), p') = True, p' = F_S(p), \text{и}\nonumber\\  
+        effect_{a'}(F_S(s), p') = F_S(effect_a(s, p)), p \subset s, p' = F_S(p);
+    \end{eqnarray}            
        
 \begin{figure}[h]
     \begin{minipage}[h]{1\linewidth}
-        \center{\includegraphics[width=0.5\linewidth]{property-actions}}    
+        \center{\includegraphics[width=0.4\linewidth]{property-actions}}    
     \end{minipage} \\
     \vfill
     {\centering $+$ \\ \medskip } 
         \begin{minipage}[h]{0.43\linewidth}
-        
+           \footnotesize
            \begin{verbatim}
     context Philosopher::getLeft(p2: Philosopher, f: Fork)
         pre 
@@ -193,7 +221,7 @@
         \end{center}
         такая, что $s_1 = I, s_i = effect_{a_{i-1}}(s_{i-1}, p_{i-1}), i > 1$ и $G(s_N) = True$ где $Plans(t)$~--- множество планов, решающих задачу $t$.
             
-        Введем вспомогательное отображение планов $F_P: Plans_{PDDL}(t) \rightarrow Plans_{UML}(t)$:
+        Введем вспомогательное преобразование планов $F_P: Plans_{PDDL}(t) \rightarrow Plans_{UML}(t)$:
             \begin{center}
                 $\forall p = \langle s_1, a_1, p_1  \rangle, \langle s_2, a_2, p_2  \rangle, ..., \langle s_N, \emptyset, \emptyset  \rangle \in Plans_{PDDL}(t) \Rightarrow $\\
             $F_P(p) = \langle F_S(s_1), F_A(a_1), F_S(p_1)  \rangle, \langle F_S(s_2), F_A(a_2), F_S(p_2)  \rangle, ..., \langle F_S(s_N), \emptyset, \emptyset  \rangle \in Plans_{UML}(t) $  
@@ -201,18 +229,18 @@
             
         Преобразование $F$ должно обладать свойством сохранения планов:
         
-        \begin{center}
-            $\forall t = \langle I, G\rangle \in T_{PDDL}, p \in Plans_{PDDL}(t) 
-            \Leftrightarrow F_P(p) \in Plans_{UML}(t) $
-
-        \end{center}
+        \begin{equation}\label{eq:plan}
+            \forall t = \langle I, G\rangle \in T_{PDDL}, p \in Plans_{PDDL}(t) \Leftrightarrow F_P(p) \in Plans_{UML}(t)
+        \end{equation}
     \end{enumerate}
     
 
-    Данное преобразование довольно легко формализовать и реализовать для PDDL-описаний, использующих только подмножество STRIPS.
- Какие возможности PDDL за пределами STRIPS может поддержать разрабатываемое средство, каким образом их представлять в UML-моделях ~--- это все еще является открытым вопросом и темой для исследований.
- Сложности могут возникнуть, например, в необходимости задания ограничений на целевое состояние с использованием кванторов, что невозможно сделать только лишь с помощью диаграмм объектов.
- Другой сложностью может быть трансляция длительных действий PDDL, например, во временные диаграммы UML.
- Существенной подзадачей является также преобразование предусловий и эффектов операций из PDDL в OCL.
+%Данное преобразование довольно легко формализовать и реализовать для PDDL-описаний, использующих только подмножество STRIPS.
+ %Какие возможности PDDL за пределами STRIPS может поддержать разрабатываемое средство, каким образом их представлять в UML-моделях ~--- это все еще является открытым вопросом и темой для исследований.
+ %Сложности могут возникнуть, например, в необходимости задания ограничений на целевое состояние с использованием кванторов, что невозможно сделать только лишь с помощью диаграмм объектов.
+ %Другой сложностью может быть трансляция длительных действий PDDL, например, во временные диаграммы UML.
+ %Существенной подзадачей является также преобразование предусловий и эффектов операций из PDDL в OCL.
+
  
+
 \newpage
