--- a/doc/main/problemsolution.tex
+++ b/doc/main/problemsolution.tex
@@ -1,18 +1,86 @@
-\section{Построение решения задачи}
+%\chapter{Построение решения задачи}
+\chapter{Построение решения задачи генерации UML-моделей по PDDL-описаниям}
    
-    Готовых средств, решающих задачу, поставленную в данной дипломной работе, нет, поэтому оправданно создание собственного средства.
+%\section{Разметка моделей при помощи профиля планирования}
+\begin{figure}[h]
+    \centering
+    \begin{minipage}{0.8\linewidth}
+        \centering
+        \includegraphics[width=0.8\linewidth]{stereo-domain}
+        \caption{Диаграмма профиля со стереотипами для описания предметной области}
+        \label{img:stereo-domain}
+    \end{minipage}
+\end{figure}
 
-    За основу разрабатываемой нотации на основе UML было решено взять нотацию, предложенную в статье \cite{mal-manz}, и, если необходимо, дополнить её новыми элементами UML или предложить новый способ представления элементов PDDL.
+\begin{figure}[h]
+    \centering
+    \begin{minipage}{0.8\linewidth}
+        \centering
+        \includegraphics[width=0.8\linewidth]{stereo-actions}
+        \caption{Диаграмма профиля со стереотипами для описания действий}
+        \label{img:stereo-actions}
+    \end{minipage}
+\end{figure}
 
-    С поддержкой преобразования такого подмножества PDDL, как STRIPS, проблем возникнуть не должно.
- Вопрос поддержки возможностей PDDL за пределами STRIPS остается открытым в работе на данный момент.
- Существующие стандарты нуждаются в более детальном изучении.
+\begin{figure}[h]
+    \centering
+    \begin{minipage}{0.75\linewidth}
+        \centering
+        \includegraphics[width=0.8\linewidth]{stereo-states}
+        \caption{Диаграмма профиля со стереотипами для описания задач и состояний}
+        \label{img:stereo-states}
+    \end{minipage}
+\end{figure} 
 
-    Существует средство PDDL4J, в котором заявлено, что реализуется парсер PDDL-описаний и предоставляется Java API для дальнейшего анализа.
- К сожалению, пока непонятно, какую версию PDDL поддерживает это средство.
- Это направлению нуждается в более детальной проработке.
-     
-    В случае, если PDDL4J нас не устроит (вопросы лицензии, обнаруженные ошибки и т.д.), то вести разработку предполагается опираясь на универсальные фреймворки для создания средств компиляции и анализа.
- Для создания парсера PDDL грамматики возможно использование ANTLR~\cite{antlr}.
- 
- \newpage
+В рамках работы \cite{mal-manz}  был предложено расширение UML для области планирования. В UML расширение осуществляется за счет расширения его метамодели посредством механизма профилей. Применение профиля планирования позволит нам использовать стереотипы, определенные в профиле. Таким образом, мы адаптируем UML для работы с новыми понятиями области планирования. 
+
+С помощью применения стереотипов можно добиться уточнения семантики элементов, наделения элементов новыми свойствами. В нашем случае это может быть полезно, так как существуют средства, работающие с UML-моделями предметных областей и задач планирования, размеченными данными стереотипами. Таким образом можно добиться более тесной интеграции разрабатываемого инструмента с другими инструментами инженерии знаний.
+
+В работе мы оперируем такими понятиями, как предметная область, которая будет размещена в UML-пакете (\texttt{package}), размеченном стереотипом  \stype{Domain}. В этом пакете будут находится классы со стереотипом \stype{ObjectType} и ассоциации со стереотипом \stype{RelationType}. Связи обобщения помечаются стереотипом \stype{Subtype}. Атрибуты классов будут иметь стереотип \stype{AttributeType} (рис.~\ref{img:stereo-domain}). Если для моделирования предметной области нужно задавать параметры среды, то в корне создается некий абстрактный класс, который помечается стереотипом \stype{Global}.
+
+
+\iffalse
+\begin{figure}[h]
+    \centering
+    \begin{minipage}{0.75\linewidth}
+        \centering
+        \includegraphics[width=0.8\linewidth]{stereo-domain-example}
+        \caption{Диаграмма классов, размеченных стереотипами, для описания предметной области}
+        \label{img:stereo-domain-example}
+    \end{minipage}
+\end{figure} 
+
+\begin{figure}[h]
+    \centering
+    \begin{minipage}{0.75\linewidth}
+        \centering
+        \includegraphics[width=0.8\linewidth]{stereo-problem-example}
+        \caption{Диаграмма классов, размеченных стереотипами, для описания задач и состояний}
+        \label{img:stereo-problem-example}
+    \end{minipage}
+\end{figure} 
+\fi
+
+Кроме того, метод класса должен быть размечен стереотипом \stype{Action}, а его пред- и пост-условия стереотипами \stype{Pre} и \stype{Post} соответственно (рис.~\ref{img:stereo-actions})
+
+Задача планирования всегда находится в своем пакете, помеченном стереотипом \stype{Problem}. Если этот пакет будет находится в другой модели, отличной от модели предметной области, то от пакета задачи необходимо провести связь \texttt{PackageImport} к пакету предметной области, такая связь должна быть размечена стереотипом \stype{DomainImport}. Объекты (экземпляры класса) и связи (экземпляры ассоциации) представляются в UML с помощью экземпляров \texttt{InstanceSpecifications}, они должны быть размечены стереотипами \stype{Object} и \stype{Relation} соответственно. Экземпляры атрибутов помещаются в слоты объектов, они помечаются стереотипом \stype{Attribute}. Внутрь пакета с описанием задачи кладется пакет с описанием начального состояния задачи, этот пакет размечается стереотипом \stype{Init}. И, наконец, ограничения на состояния размечаются стереотипом \stype{State}, причем ограничение на конечное состояния должно размечаться дополнительно стереотипом \stype{Goal} (рис.~\ref{img:stereo-states}).
+
+\iffalse
+Разметка предметной области и задачи на примере фрагмента ПО ``Обедающие философы'' приведена на рисунках~\ref{img:stereo-domain-example}~и~\ref{img:stereo-problem-example}.
+
+Готовых средств, решающих задачу, поставленную в данной дипломной работе, нет, поэтому оправдано создание собственного средства.
+
+За основу разрабатываемой нотации на основе UML было решено взять нотацию, предложенную в статье \cite{mal-manz}, и, если необходимо, дополнить её новыми элементами UML или предложить новый способ представления элементов PDDL.
+Данная нотация задает отображение UML-модели, размеченной стереотипами области планирования, в элементы PDDL. 
+Это отображение использует не все возможности PDDL, поэтому для некоторых элементов PDDL обратное отображение пока не определено. 
+Кроме того, для некоторых элементов, для которых ясно, как их представлять в UML, может быть не все так просто в связи с недостатком информации о предметной области.
+\fi
+Теперь исследуем преобразование PDDL-элементов в элементы UML и соответствие этого преобразования требованиям, представленным к работе.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\input{problemsol-transform}
+
+\input{problemsol-extra}
+
+\newpage
