--- a/doc/main/titlepage.tex
+++ b/doc/main/titlepage.tex
@@ -24,7 +24,7 @@
 \vfill
 \begin{flushright}
 Исполнитель: \\
-студент 527 группы Елисеев Владислав
+студент 527 группы Елисеев Владислав Юрьевич
 \end{flushright}
 \vfill
 \begin{flushright}
